@@ -2011,6 +2011,12 @@ GC_EXTERN signed_word GC_bytes_found;
 #ifdef THREADS
 # if defined(MSWIN32) || defined(MSWINCE)
     GC_EXTERN CRITICAL_SECTION GC_write_cs; /* defined in misc.c */
+#   ifdef GC_ASSERTIONS
+      GC_EXTERN GC_bool GC_write_disabled;
+                                /* defined in win32_threads.c;  */
+                                /* protected by GC_write_cs.    */
+
+#   endif
 # endif
 # ifdef MPROTECT_VDB
     GC_EXTERN volatile AO_TS_t GC_fault_handler_lock;
@@ -2018,7 +2024,7 @@ GC_EXTERN signed_word GC_bytes_found;
 # endif
 # ifdef MSWINCE
     GC_EXTERN GC_bool GC_dont_query_stack_min;
-                                /* Defined and set in os_dep.c.         */
+                                /* Defined and set in os_dep.c. */
 # endif
 #elif defined(IA64)
   GC_EXTERN ptr_t GC_save_regs_ret_val; /* defined in mach_dep.c. */
